glibc (2.3.2.ds1-11) unstable; urgency=low

  * Jeff Bailey <jbailey@nisa.net>

   - debian/control.in/s390x: Remove -dev dependency on gcc-3.2.
   - debian/sysdeps/s390.mk: Add missing )
   - debian/rules: Fixes for cross-compiling
   - debian/patches/90_glibc233_tcsetaddr.dpatch: LSB Fix for tcgetattr
     (Closes: #218131)

  * Phil Blundell <pb@debian.org>

   - Require linux-kernel-headers >= 2.5.999-test7-bk-9 to avoid module-
     related problems on ARM.

  * Ben Collins <bcollins@debian.org>

    - Bump sparcv9 back to -mcpu=v8 -mtune=ultrasparc.  Should fix sparcv9.

  * Daniel Jacobowitz <dan@debian.org>

    - Pass CC to configure; should fix sparc64.

  * GOTO Masanori  <gotom@debian.org>

    - debian/debhelper.in/glibc-doc.links: add missing links for
      pthread_mutex_*(), pthread_mutexattr_*(), pthread_cond_*(), and
      pthread_condattr_*().
    - debian/control.in/main: remove Build-Depends-Indep: latex2html.
      (Closes: #221317)

    - debian/local/etc_init.d/devpts.sh: rename to mountkernfs.
    - debian/local/etc_init.d/mountkernfs: rename from devpts.sh, for
      adding to mount tmpfs(shmfs) and sysfs.
    - debian/local/etc_default/tmpfs: add to control tmpfs upper limit size.
    - debian/debhelper.in/libc.dirs: add to make /sys.
    - debian/debhelper.in/libc.install: add mountkernfs and tmpfs,
      remove devpts.sh.
    - debian/debhelper.in/libc.postrm: rename devpts.sh to mountkernfs.
    - debian/debhelper.in/libc.postinst: likewise.
    - debian/local/etc_init.d/mountkernfs: fix devpts_mounted to check
      its pathname is exactly started from the top directory.

 -- Daniel Jacobowitz <dan@debian.org>  Sat, 13 Dec 2003 16:33:14 -0500

glibc (2.3.2.ds1-10) unstable; urgency=low

  This is the "Swimming to the surface" release.

  * GOTO Masanori <gotom@debian.org>

    - debian/control.in/opt: Add more ix86 CPUs in the description.
    - debian/debhelper.in/libc.preinst: Ignore old libc4/5.
      (Closes: #218449)
