@@ -7,6 +7,10 @@ glibc (2.3.2.ds1-11) unstable; urgency=low
    - debian/rules: Fixes for cross-compiling
    - debian/patches/90_glibc233_tcsetaddr.dpatch: LSB Fix for tcgetattr
      (Closes: #218131)
+   - debian/sysdeps/depflags.pl: Update wine conflicts.
+     (Closes: #218717)
+   - debian/sysdeps/depflags.pl: Update cyrus-imapd conflicts.
+     (Closes: #220983)
 
   * Phil Blundell <pb@debian.org>
 
